subscriptions: implement getting a subscription
